k8s-manifests/simple/manifests/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: simple-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: simple-server
    spec:
      containers:
      - name: simple-server
        image: roypeter/simple-server:v2
        command: ["bin/rails", "server",  "-b", "0.0.0.0"]
---

apiVersion: v1
kind: Service
metadata:
  name: simple-server
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/name: simple-server
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-server
spec:
  ingressClassName: nginx
  rules:
  - host: "simple.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: simple-server
            port:
              number: 3000
